--- a/training/lisp.textile
+++ b/training/lisp.textile
@@ -324,6 +324,11 @@ h3. mapcar
 
 mapcar simply applies another function to every object in the list
 
+a function MAPCAR that maps over a list, *db* in this case, and
+returns a new list containing the results of calling a function on
+each item in the original list.
+
+
 h3. DOLIST
 
 The @DOLIST@ macro works by looping over all the elements of @*db*@ with
@@ -382,11 +387,11 @@ explicitly passed as the argument to a keyword parameter and the
 default value NIL. To allow this, when you specify a keyword parameter
 you can replace the simple name with a 
 
-p{color:red;margin:30px}. list consisting of the name of the parameter, a default value, and
-another parameter name, called a supplied-p parameter. The supplied-p
-parameter will be set to true or false depending on whether an
-argument was actually passed for that keyword parameter in a
-particular call to the function.
+p{color:red;margin:30px}. list consisting of the name of the
+parameter, a default value, and another parameter name, called a
+supplied-p parameter. The supplied-p parameter will be set to true or
+false depending on whether an argument was actually passed for that
+keyword parameter in a particular call to the function.
 
 p. Here’s a version of foo that uses this feature:
 
