--- a/index.textile
+++ b/index.textile
@@ -4,6 +4,7 @@ p(toc). Navigation
 
 Quick Links:
 
+!(icon)/images/file.gif! "Clojure":/training/clojure.html
 !(icon)/images/file.gif! "DB 11g":/jeos/db11g/db11g.html
 !(icon)/images/file.gif! "Emacs":training/emacs.html
 !(icon)/images/file.gif! "GIT":training/git.html
