--- a/index.textile
+++ b/index.textile
@@ -13,7 +13,7 @@ Quick Links:
 !(icon)/images/file.gif! "Latex":training/latex.html
 !(icon)/images/file.gif! "Linux":training/linux.html
 !(icon)/images/file.gif! "Lisp":training/lisp.html
-!(icon)/images/file.gif! "Maven":training/machineSetup/maven.html
+!(icon)/images/file.gif! "Maven":/maven.html
 !(icon)/images/file.gif! "OVM Manager & Template Builder":/jeos/OVM_Manager_TemplateBuilder.html
 !(icon)/images/file.gif! "Oracle VM Commands":/training/oracleVM.html
 !(icon)/images/file.gif! "Setting up an Oracle Virtual Machine Lab":jeos/SettingUpVirtualLab.html
