--- a/training/clojure.textile
+++ b/training/clojure.textile
@@ -210,7 +210,9 @@ bc. C-c C-k
 | C-c C-k            | Compile the current buffer               |
 | C-x C-e            | Evaluate the expression under the cursor |
 
-h1. Using Clojure
+h1. Using Clojure 
+
+"Source of the following info":http://java.ociweb.com/mark/clojure/article.html
 
 h2. Data
 
@@ -236,13 +238,13 @@ let creates a binding that is local that form
 
 bc. 
 (def v 1) ; v is a global binding
+(defn f2 []
+ (println "v = " v)  ;; will print: v = 1
 (defn f1 []
  (println "v = " v)  ;; will print: v = 1
  (let [v 2]          ;; creates a local binding that shadows the global one
   (println "v = " v) ;; will print: v = 2
   (f2)))             
-(defn f2 []
- (println "v = " v)  ;; will print: v = 1
 (f1)                 ;; kick off the program
 
 The call to @f2@ above will produce "v = 1" because when you call the function, you leave the form, and let bindings are only local to that form.
@@ -457,7 +459,7 @@ bc.
 (defn function-name 
  "documenations" 
  [parameter list] 
- ... rest of function )
+ ( ... rest of function ))
 
 example:
 
@@ -468,8 +470,157 @@ bc.
   (str "Goodbye, " name)) ; concatenation
 (println (parting "Mark")) ; -> Goodbye, Mark
 
+h3. scope 
 
+Functions defined with the defn- macro are private. This means they
+are only visible in the namespace in which they are defined. Other
+macros that produce private definitions, such as defmacro- and
+defstruct-, are in clojure.contrib.def.
+
+h3. var args
+
+Functions can take a variable number of parameters. Optional
+parameters must appear at the end. They are gathered into a list by
+adding an ampersand and a name for the list at the end of the
+parameter list.
+
+bc. 
+(defn power [base & exponents]
+  ; Using java.lang.Math static method pow.
+  (reduce #(Math/pow %1 %2) base exponents))
+(power 2 3 4) ; 2 to the 3rd = 8; 8 to the 4th = 4096
+
+h3. function overloading, arity
+
+Function definitions can contain more than one parameter list and
+corresponding body. Each parameter list must contain a different
+number of parameters. This supports overloading functions based on
+arity. Often it is useful for a body to call the same function with a
+different number of arguments in order to provide default values for
+some of them. For example:
+
+bc. 
+(defn parting
+  "returns a String parting in a given language"
+  ([] (parting "World"))
+  ([name] (parting name "en"))
+  ([name language]
+    ; condp is similar to a case statement in other languages.
+    ; It is described in more detail later.
+    ; It is used here to take different actions based on whether the
+    ; parameter "language" is set to "en", "es" or something else.
+    (condp = language
+      "en" (str "Goodbye, " name)
+      "es" (str "Adios, " name)
+      (throw (IllegalArgumentException.
+        (str "unsupported language " language))))))
+(println (parting)) ; -> Goodbye, World
+(println (parting "Mark")) ; -> Goodbye, Mark
+(println (parting "Mark" "es")) ; -> Adios, Mark
+(println (parting "Mark", "xy"))
+; -> java.lang.IllegalArgumentException: unsupported language xy
 
 h3. annonymous functions
 
 @#(...)@, putting a hash in front of the parens is how to make an anonymous function
+
+Anonymous functions have no name. These are often passed as arguments
+to a named function. They are handy for short function definitions
+that are only used in one place. There are two ways to define them,
+shown below:
+
+bc. 
+(def years [1940 1944 1961 1985 1987])
+(filter (fn [year] (even? year)) years) ; long way w/ named arguments -> (1940 1944)
+(filter #(even? %) years) ; short way where % refers to the argument
+
+When an anonymous function is defined using the fn special form, the
+body can contain any number of expressions.
+
+When an anonymous function is defined in the short way using #(...),
+it can only contain a single expression. To use more than one
+expression, wrap them in the do special form. If there is only one
+parameter, it can be referred to with %. If there are multiple
+parameters, they are referred to with %1, %2 and so on. For example:
+
+bc. 
+(defn pair-test [test-fn n1 n2]
+  (if (test-fn n1 n2) "pass" "fail"))
+; Use a test-fn that determines whether
+; the sum of its two arguments is an even number.
+(println (pair-test #(even? (+ %1 %2)) 3 5)) ; -> pass
+
+Java methods can be overloaded based on parameter types. Clojure
+functions can only be overloaded on arity. Clojure multimethods
+however, can be overloaded based on anything.
+
+The defmulti and defmethod macros are used together to define a
+multimethod. 
+
+The arguments to defmulti are:
+
+* the method name and 
+* the dispatch function which returns a value that will be used to select a
+method. 
+
+The arguments to defmethod are:
+
+* the method name, 
+* the dispatch value that triggers use of the method, 
+* the parameter list and 
+* the body. 
+
+The special dispatch value :default is used to designate a
+method to be used when none of the others match. Each defmethod for
+the same multimethod name must take the same number of arguments. The
+arguments passed to a multimethod are passed to the dispatch function.
+
+Here's an example of a multimethod that overloads based on type.
+
+bc. 
+(defmulti what-am-i class) ; class is the dispatch function
+(defmethod what-am-i Number [arg] (println arg "is a Number"))
+(defmethod what-am-i String [arg] (println arg "is a String"))
+(defmethod what-am-i :default [arg] (println arg "is something else"))
+(what-am-i 19) ; -> 19 is a Number
+(what-am-i "Hello") ; -> Hello is a String
+(what-am-i true) ; -> true is something else
+
+class returns the class of its argument.  So basically when we call
+what-am-i an argument x, x is passed to the function 'class' and the
+result of that function is compared to the 3rd value in the defmethod
+calls.  When a match is found, x is then passed along into the
+function defined at the end of defmethod.
+
+Since the dispatch function can be any function, including one you
+write, the possibilities are endless. For example, a custom dispatch
+function could examine its arguments and return a keyword to indicate
+a size such as :small, :medium or :large. One method for each size
+keyword can provide logic that is specific to a given size.
+
+Underscores can be used as placeholders for function parameters that
+won't be used and therefore don't need a name. This is often useful in
+callback functions which are passed to another function so they can be
+invoked later. A particular callback function may not use all the
+arguments that are passed to it. For example:
+
+bc. 
+(defn callback1 [n1 n2 n3] (+ n1 n2 n3)) ; uses all three arguments
+(defn callback2 [n1 _ n3] (+ n1 n3)) ; only uses 1st & 3rd arguments
+(defn caller [callback value]
+  (callback (+ value 1) (+ value 2) (+ value 3)))
+(caller callback1 10) ; 11 + 12 + 13 -> 36
+(caller callback2 10) ; 11 + 13 -> 24
+
+h2. Java Interoperability
+
+Clojure programs can use all Java classes and interfaces. As in Java,
+classes in the java.lang package can be used without importing
+them. Java classes in other packages can be used by either specifying
+their package when referencing them or using the import function. For
+example:
+
+bc. 
+(import
+  '(java.util Calendar GregorianCalendar)
+  '(javax.swing JFrame JLabel))
