--- a/training/linux.textile
+++ b/training/linux.textile
@@ -129,7 +129,7 @@ h2. VPN
 
 h2. Config
 
-* "Generate your ssh key pair":ssh.html#keypair
+* "Generate your ssh key pair":/ssh.html#keypair
 
 * Add plugin downthemall to firefox.
 
