--- a/index.textile
+++ b/index.textile
@@ -10,7 +10,7 @@ Quick Links:
 !(icon)/images/file.gif! "GIT":training/git.html
 !(icon)/images/file.gif! "Groovy & Gradle":training/java/groovy.html
 !(icon)/images/file.gif! "Java":training/java/java.html
-!(icon)/images/file.gif! "JSF":training/javaEE6/jsf.html
+!(icon)/images/file.gif! "JSF":/jsf.html
 !(icon)/images/file.gif! "Latex":training/latex.html
 !(icon)/images/file.gif! "Linux":training/linux.html
 !(icon)/images/file.gif! "Lisp":training/lisp.html
