--- a/training/git.textile
+++ b/training/git.textile
@@ -366,7 +366,7 @@ Then you can do the rest of the commands for Git specified above.
 
 h1(#gitRouting). Change your routing
 
-Note: this tutorial is designed for linux and mac users.
+_Note: this tutorial is designed for linux and mac users._
 
 If you are plugged on a company network where SSH is not tolerated but on the other hand have access to a wifi network where it is, 
 there is a way to have GIT working without plugging/unplugging your network cable
@@ -374,9 +374,10 @@ there is a way to have GIT working without plugging/unplugging your network cabl
 * connect to the wifi network and make sure you can access internet
 You can now figure out two informations from the traceroute command:
 
-@bvanders-laptop:~ bvanders$ traceroute spicevan.com@
-@traceroute to spicevan.com (173.236.138.100), 64 hops max, 40 byte packets@
-@ 1  xxx.xxxx.xxx (192.168.0.1)  163.935 ms  167.994 ms  153.271 ms@
+bc. 
+bvanders-laptop:~ bvanders$ traceroute spicevan.com
+traceroute to spicevan.com (173.236.138.100), 64 hops max, 40 byte packets
+ 1  xxx.xxxx.xxx (192.168.0.1)  163.935 ms  167.994 ms  153.271 ms
 
 _192.168.0.1_ is your gateway
 _173.236.138.100_ is spicevan.com's ip address
